--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
 
 	<groupId>com.jdom</groupId>
 	<artifactId>util.lang</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<description>Common language utilities</description>
 
 	<properties>
 		<commons-io.version>2.1</commons-io.version>
 		<commons-lang.version>2.6</commons-lang.version>
+		<guava.version>14.0-rc1</guava.version>
 		<junit.version>4.8.2</junit.version>
 		<util.junit.version>0.0.1</util.junit.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
@@ -66,6 +67,11 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 
 		<!-- Test Dependencies -->
